# somisana-download

./: .gitignore  Dockerfile  README.md  cli.py  environment.yml  pyproject.toml
.github/workflows/: build_image.yml
download_tools/: cmems.py  gfs.py  hycom.py  phyto.py
