[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somisana-download"
version = "0.1"
description = "Tools for downloading useful data."
authors = [{ name = "Giles Fearon", email = "g.fearon@saeon.nrf.ac.za" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

